--- a/examples/prod_sample/fit_model.ipynb
+++ b/examples/prod_sample/fit_model.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-07T01:05:50.878720Z",
@@ -30,7 +30,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "AutoML-Alex version: 1.2.28\n"
+      "AutoML-Alex version: 1.3.5\n"
      ]
     }
    ],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-07T01:05:52.553896Z",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-07T01:05:55.127924Z",
@@ -112,7 +112,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>age</th>\n      <th>workclass</th>\n      <th>fnlwgt</th>\n      <th>education</th>\n      <th>education-num</th>\n      <th>marital-status</th>\n      <th>occupation</th>\n      <th>relationship</th>\n      <th>race</th>\n      <th>sex</th>\n      <th>capitalgain</th>\n      <th>capitalloss</th>\n      <th>hoursperweek</th>\n      <th>native-country</th>\n      <th>class</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>3</td>\n      <td>Private</td>\n      <td>304857</td>\n      <td>Masters</td>\n      <td>14</td>\n      <td>Separated</td>\n      <td>Tech-support</td>\n      <td>Not-in-family</td>\n      <td>White</td>\n      <td>Male</td>\n      <td>4</td>\n      <td>0</td>\n      <td>2</td>\n      <td>United-States</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0</td>\n      <td>Private</td>\n      <td>189590</td>\n      <td>Bachelors</td>\n      <td>13</td>\n      <td>Never-married</td>\n      <td>Tech-support</td>\n      <td>Not-in-family</td>\n      <td>White</td>\n      <td>Male</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n      <td>United-States</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>4</td>\n      <td>Private</td>\n      <td>96299</td>\n      <td>HS-grad</td>\n      <td>9</td>\n      <td>Divorced</td>\n      <td>Transport-moving</td>\n      <td>Unmarried</td>\n      <td>White</td>\n      <td>Male</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n      <td>United-States</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>Self-emp-not-inc</td>\n      <td>196307</td>\n      <td>Bachelors</td>\n      <td>13</td>\n      <td>Never-married</td>\n      <td>Prof-specialty</td>\n      <td>Not-in-family</td>\n      <td>White</td>\n      <td>Male</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>United-States</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0</td>\n      <td>Private</td>\n      <td>265434</td>\n      <td>Some-college</td>\n      <td>10</td>\n      <td>Never-married</td>\n      <td>Prof-specialty</td>\n      <td>Own-child</td>\n      <td>White</td>\n      <td>Female</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>United-States</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 7
     }
    ],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,104 +139,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "01:15:38 | > Start Fit Base Model\n",
-      "01:16:15 | > DATA PREPROC\n",
-      "01:16:15 | Source data shape: (36631, 14)\n",
-      "01:16:15 | ##################################################\n",
-      "01:16:15 | ! START preprocessing Data\n",
-      "01:16:15 | - Auto detect cat features: 12\n",
-      "01:16:15 | > Binary Features\n",
-      "01:16:15 | > Clean Categorical Features\n",
-      "01:16:16 | > Transform Categorical Features.\n",
-      "01:16:16 |  - Encoder: OneHotEncoder ADD features: 135\n",
-      "01:16:17 |  - Encoder: CountEncoder ADD features: 12\n",
-      "01:16:17 | > CleanOutliers\n",
-      "01:16:17 | Num of outlier detected: 3070 in Feature capitalgain\n",
-      "01:16:17 | Proportion of outlier detected: 8.4 %\n",
-      "01:16:17 | Num of outlier detected: 231 in Feature education-num\n",
-      "01:16:17 | Proportion of outlier detected: 0.6 %\n",
-      "01:16:17 | Num of outlier detected: 1706 in Feature capitalloss\n",
-      "01:16:17 | Proportion of outlier detected: 4.7 %\n",
-      "01:16:17 | Num of outlier detected: 527 in Feature fnlwgt\n",
-      "01:16:17 | Proportion of outlier detected: 1.4 %\n",
-      "01:16:17 | Num of outlier detected: 15707 in Feature hoursperweek\n",
-      "01:16:17 | Proportion of outlier detected: 42.9 %\n",
-      "01:16:17 |   No nans features\n",
-      "01:16:17 | > Generate interaction Num Features\n",
-      "01:16:17 |  ADD features: 75\n",
-      "01:16:17 | > Normalization Features\n",
-      "01:16:18 | ##################################################\n",
-      "01:16:18 | Final data shape: (36631, 242)\n",
-      "01:16:18 | Total ADD columns: 228\n",
-      "01:16:18 | ##################################################\n",
-      "01:16:18 | ##################################################\n",
-      "01:16:18 | > Start Fit Models 3\n",
-      "01:16:18 | ##################################################\n",
-      "01:16:46 | > DATA PREPROC\n",
-      "01:16:46 | Source data shape: (36631, 14)\n",
-      "01:16:46 | ##################################################\n",
-      "01:16:47 | ! START preprocessing Data\n",
-      "01:16:47 | - Auto detect cat features: 12\n",
-      "01:16:47 | > Binary Features\n",
-      "01:16:47 | > Clean Categorical Features\n",
-      "01:16:47 | > Transform Categorical Features.\n",
-      "01:16:47 |  - Encoder: HelmertEncoder ADD features: 123\n",
-      "01:16:48 |  - Encoder: CountEncoder ADD features: 12\n",
-      "01:16:48 |  - Encoder: HashingEncoder ADD features: 12\n",
-      "01:16:48 | > CleanOutliers\n",
-      "01:16:48 | Num of outlier detected: 3070 in Feature capitalgain\n",
-      "01:16:48 | Proportion of outlier detected: 8.4 %\n",
-      "01:16:48 | Num of outlier detected: 231 in Feature education-num\n",
-      "01:16:48 | Proportion of outlier detected: 0.6 %\n",
-      "01:16:48 | Num of outlier detected: 1706 in Feature capitalloss\n",
-      "01:16:48 | Proportion of outlier detected: 4.7 %\n",
-      "01:16:48 | Num of outlier detected: 527 in Feature fnlwgt\n",
-      "01:16:48 | Proportion of outlier detected: 1.4 %\n",
-      "01:16:48 | Num of outlier detected: 15707 in Feature hoursperweek\n",
-      "01:16:48 | Proportion of outlier detected: 42.9 %\n",
-      "01:16:48 |   No nans features\n",
-      "01:16:48 | > Generate interaction Num Features\n",
-      "01:16:48 |  ADD features: 75\n",
-      "01:16:48 | ##################################################\n",
-      "01:16:48 | Final data shape: (36631, 242)\n",
-      "01:16:48 | Total ADD columns: 228\n",
-      "01:16:48 | ##################################################\n",
-      "01:16:48 | ##################################################\n",
-      "01:16:48 | > Start Fit Models 4\n",
-      "01:17:11 | ##################################################\n",
-      "01:17:11 | > Start Fit Models 5\n",
-      "01:17:11 | ##################################################\n",
-      "01:17:11 | ##################################################\n",
-      "01:17:12 | > Step 1: calc parameters and pruned score: get test 10 trials\n",
-      "01:20:31 |  One iteration ~ 19.9 sec\n",
-      "01:20:31 |  Possible iters ~ 22.0\n",
-      "01:20:31 | ! Not enough time to find the optimal parameters. \n",
+      "00:12:18 | > Start Fit Base Model\n",
+      "00:12:50 | > DATA PREPROC\n",
+      "00:12:50 | Source data shape: (36631, 14)\n",
+      "00:12:50 | ##################################################\n",
+      "00:12:50 | ! START preprocessing Data\n",
+      "00:12:50 | - Auto detect cat features: 12\n",
+      "00:12:50 | > Binary Features\n",
+      "00:12:50 | > Clean Categorical Features\n",
+      "00:12:50 | > Transform Categorical Features.\n",
+      "00:12:51 |  - Encoder: OneHotEncoder ADD features: 135\n",
+      "00:12:51 |  - Encoder: CountEncoder ADD features: 12\n",
+      "00:12:51 |   No nans features\n",
+      "00:12:51 | > CleanOutliers\n",
+      "00:12:51 | Num of outlier detected: 15707 in Feature hoursperweek\n",
+      "00:12:51 | Proportion of outlier detected: 42.9 %\n",
+      "00:12:51 | Num of outlier detected: 1706 in Feature capitalloss\n",
+      "00:12:51 | Proportion of outlier detected: 4.7 %\n",
+      "00:12:51 | Num of outlier detected: 527 in Feature fnlwgt\n",
+      "00:12:51 | Proportion of outlier detected: 1.4 %\n",
+      "00:12:51 | Num of outlier detected: 3070 in Feature capitalgain\n",
+      "00:12:51 | Proportion of outlier detected: 8.4 %\n",
+      "00:12:51 | Num of outlier detected: 231 in Feature education-num\n",
+      "00:12:51 | Proportion of outlier detected: 0.6 %\n",
+      "00:12:51 | > Generate interaction Num Features\n",
+      "00:12:51 |  ADD features: 75\n",
+      "00:12:52 | > Normalization Features\n",
+      "00:12:52 | ##################################################\n",
+      "00:12:52 | Final data shape: (36631, 242)\n",
+      "00:12:52 | Total ADD columns: 228\n",
+      "00:12:52 | ##################################################\n",
+      "00:12:52 | ##################################################\n",
+      "00:12:52 | > Start Fit Models 3\n",
+      "00:12:52 | ##################################################\n",
+      "00:13:15 | > DATA PREPROC\n",
+      "00:13:15 | Source data shape: (36631, 14)\n",
+      "00:13:15 | ##################################################\n",
+      "00:13:15 | ! START preprocessing Data\n",
+      "00:13:15 | - Auto detect cat features: 12\n",
+      "00:13:15 | > Binary Features\n",
+      "00:13:15 | > Clean Categorical Features\n",
+      "00:13:15 | > Transform Categorical Features.\n",
+      "00:13:16 |  - Encoder: HelmertEncoder ADD features: 123\n",
+      "00:13:16 |  - Encoder: CountEncoder ADD features: 12\n",
+      "00:13:16 |  - Encoder: HashingEncoder ADD features: 12\n",
+      "00:13:16 |   No nans features\n",
+      "00:13:16 | > CleanOutliers\n",
+      "00:13:16 | Num of outlier detected: 15707 in Feature hoursperweek\n",
+      "00:13:16 | Proportion of outlier detected: 42.9 %\n",
+      "00:13:16 | Num of outlier detected: 1706 in Feature capitalloss\n",
+      "00:13:16 | Proportion of outlier detected: 4.7 %\n",
+      "00:13:16 | Num of outlier detected: 527 in Feature fnlwgt\n",
+      "00:13:16 | Proportion of outlier detected: 1.4 %\n",
+      "00:13:16 | Num of outlier detected: 3070 in Feature capitalgain\n",
+      "00:13:16 | Proportion of outlier detected: 8.4 %\n",
+      "00:13:16 | Num of outlier detected: 231 in Feature education-num\n",
+      "00:13:16 | Proportion of outlier detected: 0.6 %\n",
+      "00:13:16 | > Generate interaction Num Features\n",
+      "00:13:17 |  ADD features: 75\n",
+      "00:13:17 | ##################################################\n",
+      "00:13:17 | Final data shape: (36631, 242)\n",
+      "00:13:17 | Total ADD columns: 228\n",
+      "00:13:17 | ##################################################\n",
+      "00:13:17 | ##################################################\n",
+      "00:13:17 | > Start Fit Models 4\n",
+      "00:13:36 | ##################################################\n",
+      "00:13:36 | > Start Fit Models 5\n",
+      "00:13:36 | ##################################################\n",
+      "00:13:36 | ##################################################\n",
+      "00:13:37 | > Step 1: calc parameters and pruned score: get test 10 trials\n",
+      "00:17:46 |  One iteration ~ 24.9 sec\n",
+      "00:17:46 |  Possible iters ~ 18.0\n",
+      "00:17:46 | ! Not enough time to find the optimal parameters. \n",
       "                     Possible iters < 100. \n",
       "                     Please, Increase the 'timeout' parameter for normal optimization.\n",
-      "01:20:31 | --------------------------------------------------\n",
-      "01:20:31 |   Pruned Threshold Score: 0.8994\n",
-      "01:20:31 | ##################################################\n",
-      "01:20:31 | > Step 2: Full opt with Threshold Score Pruner\n",
-      "01:20:31 | ##################################################\n",
-      "01:20:31 | > Start optimization with the parameters:\n",
-      "01:20:31 | CV_Folds = 10\n",
-      "01:20:31 | Score_CV_Folds = 2\n",
-      "01:20:31 | Feature_Selection = True\n",
-      "01:20:31 | Opt_lvl = 1\n",
-      "01:20:31 | Cold_start = 10\n",
-      "01:20:31 | Early_stoping = 25\n",
-      "01:20:31 | Metric = roc_auc_score\n",
-      "01:20:31 | Direction = maximize\n",
-      "01:20:31 | ##################################################\n",
-      "Optimize: : 33it [07:35, 13.82s/it, | Model: LightGBM | OptScore: 0.9091 | Best roc_auc_score: 0.9115 ]\n",
-      "01:28:07 | > Finish Opt!\n",
+      "00:17:46 | --------------------------------------------------\n",
+      "00:17:46 |   Pruned Threshold Score: 0.8986\n",
+      "00:17:46 | ##################################################\n",
+      "00:17:46 | > Step 2: Full opt with Threshold Score Pruner\n",
+      "00:17:46 | ##################################################\n",
+      "00:17:46 | > Start optimization with the parameters:\n",
+      "00:17:46 | CV_Folds = 7\n",
+      "00:17:46 | Score_CV_Folds = 2\n",
+      "00:17:46 | Feature_Selection = True\n",
+      "00:17:46 | Opt_lvl = 1\n",
+      "00:17:46 | Cold_start = 10\n",
+      "00:17:46 | Early_stoping = 25\n",
+      "00:17:46 | Metric = roc_auc_score\n",
+      "00:17:46 | Direction = maximize\n",
+      "00:17:46 | ##################################################\n",
+      "Optimize: : 35it [09:06, 15.61s/it, | Model: LightGBM | OptScore: 0.9092 | Best roc_auc_score: 0.911 ]\n",
+      "00:26:52 | > Finish Opt!\n",
       "Finished loading model, total used 300 iterations\n",
       "Finished loading model, total used 300 iterations\n",
       "Finished loading model, total used 300 iterations\n",
@@ -244,24 +244,28 @@
       "Finished loading model, total used 300 iterations\n",
       "Finished loading model, total used 300 iterations\n",
       "Finished loading model, total used 300 iterations\n",
-      "Finished loading model, total used 300 iterations\n",
-      "Finished loading model, total used 300 iterations\n",
-      "Finished loading model, total used 300 iterations\n",
-      "01:28:59 | Best Score: 0.9115 roc_auc_score\n",
-      "01:28:59 | Save Model\n",
-      "01:28:59 | Save Model\n",
-      "01:28:59 | Save Model\n",
-      "01:28:59 | Save Model\n",
-      "01:28:59 | Save Model\n",
-      "01:28:59 | Save Model\n",
-      "01:28:59 | Save Model\n",
-      "01:28:59 | Save Model\n",
-      "01:28:59 | Save Model\n",
-      "01:29:00 | Save Model\n",
+      "00:27:10 | Best Score: 0.911 roc_auc_score\n",
+      "00:27:10 | Save Model\n",
+      "00:27:11 | Save Model\n",
+      "00:27:11 | Save Model\n",
+      "00:27:11 | Save Model\n",
+      "00:27:11 | Save Model\n",
+      "00:27:11 | Save Model\n",
+      "00:27:11 | Save Model\n",
       "Save model\n",
-      "01:29:01 | ##################################################\n",
-      "01:29:01 | > Finish!\n"
+      "00:27:12 | ##################################################\n",
+      "00:27:12 | > Finish!\n"
      ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<automl_alex.automl_alex.AutoMLClassifier at 0x7f90292e4490>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
     }
    ],
    "source": [
@@ -278,27 +282,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "01:29:01 | Save DataPrepare\n",
-      "01:29:01 | Save DataPrepare\n",
-      "01:29:02 | Save Model\n",
-      "01:29:02 | Save Model\n",
-      "01:29:02 | Save Model\n",
-      "01:29:02 | Save Model\n",
-      "01:29:02 | Save Model\n",
-      "01:29:02 | Save Model\n",
-      "01:29:02 | Save Model\n",
-      "01:29:02 | Save Model\n",
-      "01:29:02 | Save Model\n",
-      "01:29:02 | Save Model\n",
+      "00:27:12 | Save DataPrepare\n",
+      "00:27:12 | Save DataPrepare\n",
+      "00:27:13 | Save Model\n",
+      "00:27:13 | Save Model\n",
+      "00:27:13 | Save Model\n",
+      "00:27:13 | Save Model\n",
+      "00:27:13 | Save Model\n",
+      "00:27:13 | Save Model\n",
+      "00:27:13 | Save Model\n",
       "Save model\n",
-      "01:29:04 | Save AutoML\n"
+      "00:27:15 | Save AutoML\n"
      ]
     }
    ],
